# mandelbrot.rs

./: .gitignore  Cargo.toml
brot-rs/: Cargo.toml
brot-rs/src/: main.rs  progress.rs  utils.rs
librot-rs/: Cargo.toml
librot-rs/src/: colour.rs  interp.rs  lib.rs  settings.rs
palettes/: blue-orange  dusty_pink  fire  rby  rgb  teal-pink  test
src/: colour.rs  interp.rs  lib.rs  main.rs  settings.rs  utils.rs
