cargo-features = ["edition2021"]

[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["lily <yulex.42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.7"
threadpool = "1.8.1"
num = "0.3.0"
