[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["lily <yulex.42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "~0.17"
num = "0.3.0"
jemallocator = "0.3.0"

[profile.release]
lto = "fat"
codegen-units = 1
