[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["lily <yulex.42@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "~0.17"
num = "0.4.0"
jemallocator = "0.3.0"
rayon = "1.5.1"
crossbeam = "*"
atomic-counter = "*"
threadpool = "1.8.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[profile.release]
lto = "fat"
codegen-units = 1
